--- a/src/views/main.ejs
+++ b/src/views/main.ejs
@@ -65,7 +65,7 @@
               <div class="row">
                 <h3 class="ml-4">Operator: <%= locals.user %>
                     </h2>
-                    <h3 id="ActualDate" class="ml-auto mr-2">
+                    <h3 id="actualDate" class="ml-auto mr-2">
                       </h2>
               </div>
             </div>
